# TALLER-PRACTICO-INTEGRADOR

./: Locust_2025-10-29-22h08_locustfile.py_http___localhost_5000_requests.csv  README.md
api-inventario/: .coverage  locustfile.py  pipeline.py  pyproject.toml  report.html  requeriments.txt
api-inventario/features/: inventario.feature
api-inventario/features/steps/: inventario_steps.py
api-inventario/src/: inventario.db
api-inventario/src/inventario/: app.py
api-inventario/tests/: test_app.py
