[tool.poetry]
name = "api-inventario"
version = "0.1.0"
description = "API de inventario con Flask"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{ include = "inventario", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-paginate = "^2024.4.12"
behave = "^1.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
coverage = "^7.6.0"
behave = "^1.3.3"
pytest-cov = "^7.0.0"
behave-html-formatter = "^0.9.10"
locust = "^2.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"